<resources>
    <string name="app_name">SingNow!</string>
    <string name="welcome_title">WELCOME</string>
    <string name="login_title">LOG IN</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpw">Confirm password</string>
    <string name="signup_title">SIGN UP</string>
    <string name="facebook_app_id">159946921298336</string>
</resources>
